# mardiros.github.io

./: Justfile  README.md  conf.py  index.html  index.md  pyproject.toml  requirements.txt
.github/workflows/: gh-pages.yml
public/: .buildinfo  README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
public/.doctrees/: README.doctree  environment.pickle  index.doctree
public/_sources/: README.md.txt
