[tool.poetry]
name = "mardiros-gh-pages"
version = "0.1.0"
description = "mardiros.github.io source"
authors = ["Guillaume Gauvrit <guillaume@gauvr.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
furo = "^2023.7.26"
myst-parser = "^2.0.0"
sphinx = "^7.1.1"
tomlkit = "^0.12.1"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
