[project]
authors = [{ name = "Guillaume Gauvrit", email = "guillaume@gauvr.it" }]
requires-python = ">=3.11,<4.0"
dependencies = [
    "furo >=2024.8.6,<2026.0.0",
    "myst-parser >=2.0.0,<3.0.0",
    "sphinx >=7.1.1,<8.0.0",
    "tomlkit >=0.12.1,<1.0.0",
]
name = "mardiros-gh-pages"
version = "0.1.0"
description = "mardiros.github.io source"
readme = "README.md"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
